--- a/ws168idamp.html
+++ b/ws168idamp.html
@@ -638,6 +638,115 @@ span {
                         <li>Bonus Selamat Datang: Diberikan kepada pemain baru sebagai sambutan.</li>
                         <li>Bonus Deposit: Diberikan kepada pemain saat melakukan deposit, meningkatkan saldo bermain mereka.</li>
                         <li>Promosi Berkala: Berbagai promosi mingguan dan bulanan yang dirancang untuk memberikan nilai tambah kepada pemain setia.</li>
+                        <h2>Kemudahan Pendaftaran dan Taruhan di WS168</h2>
+                        <h3>1. Proses Pendaftaran yang Mudah</h3>
+                        <li>Pengisian Formulir Singkat: Isi informasi dasar seperti nama, email, dan nomor telepon.</li>
+                        <li>Verifikasi Email/Telepon: Aktivasi akun melalui kode verifikasi.</li>
+                        <li>Login dan Mulai Bermain: Langsung login dan nikmati layanan WS168.</li>
+                        <h3>2. Antarmuka Pengguna yang Intuitif</h3>
+                        <li>Navigasi mudah dengan menu yang jelas dan opsi yang mudah diakses.</li>
+                        <h3>3. Kemudahan dalam Melakukan Taruhan</h3>
+                        <li>Metode Pembayaran Beragam: Transfer bank, e-wallet, dan kartu kredit.</li>
+                        <li>Panduan Taruhan: Membantu memahami cara memasang taruhan.</li>
+                        <li>Fitur Quick Bet: Pasang taruhan dengan cepat hanya dengan beberapa klik.</li>
+                        <li>Pilihan Taruhan Beragam: Taruhan langsung dan kombinasi.</li>
+                        <h3>4. Live Betting dan Streaming</h3>
+                        <li>Pasang taruhan selama pertandingan berlangsung dengan fitur live betting dan streaming berkualitas tinggi.</li>
+                        <h3>5. Bonus dan Promosi untuk Pemain Baru</h3>
+                        <li>Bonus Selamat Datang: Untuk deposit pertama.</li>
+                        <li>Bonus Deposit: Tambahan saldo setiap kali deposit.</li>
+                        <li>Promosi Taruhan Gratis: Taruhan tanpa risiko untuk mencoba berbagai jenis taruhan.</li>
+                        <p>Dengan kemudahan pendaftaran, antarmuka intuitif, metode pembayaran beragam, panduan taruhan, fitur quick bet, live betting, dan bonus menarik, WS168 memudahkan pemain untuk mendaftar dan memasang taruhan.</p>
+                        <h2>Komunitas Sabung Ayam yang Aktif di WS168</h2>
+                        <h3>1. Forum Diskusi</h3>
+                        <li>Tempat berbagi pengalaman, strategi, dan tips antar pemain.</li>
+                        <h3>2. Grup Media Sosial</h3>
+                        <li>Komunitas aktif di Facebook, Instagram, dan Twitter untuk update dan diskusi.</li>
+                        <h3>3. Turnamen dan Acara Komunitas</h3>
+                        <li>Turnamen dan acara yang mempertemukan pemain dari berbagai daerah.</li>
+                        <h3>4. Dukungan Pelanggan Responsif</h3>
+                        <li>Tim dukungan yang siap membantu melalui live chat, email, atau telepon.</li>
+                        <h3>5. Program Referral dan Bonus Komunitas</h3>
+                        <li>Bonus untuk mengajak teman bergabung, mendorong pertumbuhan komunitas.</li>
+                        <h3>6. Konten Edukasi</h3>
+                        <li>Artikel, video tutorial, dan webinar untuk membantu pemain baru memahami sabung ayam.</li>
+                        <p>WS168 membangun komunitas sabung ayam yang aktif dan dinamis, memungkinkan pemain untuk terlibat dan berkembang bersama.</p>
+                        <h2>Peluang Bisnis yang Menguntungkan di WS168 Sabung Ayam Online</h2>
+                        <h3>1. Program Afiliasi</h3>
+                        <p>Contoh: Jika Anda merekrut 100 pemain melalui link afiliasi Anda dan masing-masing pemain rata-rata menghabiskan Rp 1.000.000 per bulan untuk taruhan, dan komisi afiliasi adalah 10%, maka:</p>
+                        <li>Pendapatan Bulanan Anda: 100 pemain x Rp 1.000.000 x 10% = Rp 10.000.000</li>
+                        <li>Dengan terus merekrut pemain baru, pendapatan afiliasi Anda dapat tumbuh secara signifikan.</li>
+                        <h3>2. Penjualan Kredit Taruhan</h3>
+                        <p>Contoh: Anda membeli kredit taruhan dari WS168 dengan harga diskon dan menjualnya kepada pemain dengan harga pasar:</p>
+                        <li>Harga Beli Kredit: Rp 950.000 untuk nilai kredit Rp 1.000.000</li>
+                        <li>Harga Jual Kredit: Rp 1.000.000</li>
+                        <li>Keuntungan Per Transaksi: Rp 50.000</li>
+                        <li>Jika Anda menjual 200 transaksi per bulan: 200 x Rp 50.000 = Rp 10.000.000</li>
+                        <h3>3. Pengembangan Konten</h3>
+                        <p>Contoh: Anda membuat blog dan YouTube channel yang fokus pada sabung ayam dan strategi taruhan:</p>
+                        <li>Blog: Mendapatkan 50.000 pengunjung per bulan dengan pendapatan iklan Rp 20 per pengunjung
+                            Pendapatan Iklan Bulanan: 50.000 x Rp 20 = Rp 1.000.000</li>
+                        <li>YouTube Channel: Mendapatkan 100.000 views per bulan dengan pendapatan iklan Rp 10 per view
+                            Pendapatan Iklan Bulanan: 100.000 x Rp 10 = Rp 1.000.000</li>
+                        <h3>4. Jasa Konsultasi</h3>
+                        <p>Contoh: Anda menawarkan jasa konsultasi dan analisis pertandingan:</p>
+                        <li>Tarif Konsultasi: Rp 500.000 per jam</li>
+                        <li>Jika Anda memberikan 20 jam konsultasi per bulan: 20 x Rp 500.000 = Rp 10.000.000</li>
+                        <h3>5. Turnamen dan Event</h3>
+                        <p>Contoh: Anda menyelenggarakan turnamen sabung ayam dengan dukungan WS168:</p>
+                        <li>Biaya Pendaftaran Peserta: Rp 1.000.000 per peserta</li>
+                        <li>Jumlah Peserta: 50
+                            Pendapatan dari Pendaftaran: 50 x Rp 1.000.000 = Rp 50.000.000</li>
+                        <li>Sponsor dan Iklan: Rp 20.000.000</li>
+                        <p>Dengan berbagai peluang bisnis seperti program afiliasi, penjualan kredit taruhan, pengembangan konten, jasa konsultasi, dan penyelenggaraan turnamen, WS168 menawarkan banyak cara untuk menghasilkan keuntungan dalam dunia sabung ayam online. Data dan contoh konkret menunjukkan potensi pendapatan yang signifikan dari masing-masing peluang bisnis ini.</p>
+                        <h2>Keunggulan WS168 Sabung Ayam Online</h2>
+                        <h3>1. Keamanan Terjamin</h3>
+                        <li>Enkripsi Data Tingkat Tinggi: Melindungi informasi pribadi dan transaksi keuangan.</li>
+                        <li>Protokol SSL dan HTTPS: Menyediakan koneksi yang aman dan terenkripsi.</li>
+                        <li>Autentikasi Dua Faktor (2FA): Menambahkan lapisan keamanan ekstra.</li>
+                        <h3>2. Akses 24 Jam</h3>
+                        <li>Ketersediaan Tanpa Batas Waktu: Pemain dapat menikmati sabung ayam kapan saja sesuai jadwal mereka.</li>
+                        <h3>3. Pilihan Pertandingan yang Beragam</h3>
+                        <li>Berbagai Jenis Pertandingan: Menawarkan pertandingan dari berbagai arena terkenal, memastikan pengalaman bermain yang dinamis.</li>
+                        <h3>4. Bonus Menarik</h3>
+                        <li>Bonus Selamat Datang: Untuk pemain baru.</li>
+                        <li>Bonus Deposit: Tambahan saldo pada setiap deposit.</li>
+                        <li>Promosi Berkala: Berbagai promosi mingguan dan bulanan.</li>
+                        <h3>5. Live Streaming Berkualitas Tinggi</h3>
+                        <li>Kualitas Video Tinggi: Memungkinkan pemain mengikuti pertandingan secara real-time dengan jelas.</li>
+                        <h3>6. Antarmuka Pengguna yang Ramah</h3>
+                        <li>Desain Intuitif: Mudah digunakan oleh semua pemain, baik pemula maupun berpengalaman.</li>
+                        <h3>7. Dukungan Pelanggan Profesional</h3>
+                        <li>Layanan Responsif: Tersedia melalui live chat, email, dan telepon untuk membantu pemain dengan segala pertanyaan atau masalah.</li>
+                        <h3>8. Kemudahan Pendaftaran dan Taruhan</h3>
+                        <li>Proses Pendaftaran Mudah: Cepat dan sederhana.</li>
+                        <li>Metode Pembayaran Beragam: Transfer bank, e-wallet, dan kartu kredit.</li>
+                        <li>Fitur Quick Bet: Memungkinkan taruhan dengan cepat hanya dengan beberapa klik.</li>
+                        <li>Panduan Taruhan: Membantu pemain memahami cara memasang taruhan.</li>
+                        <h3>9. Komunitas Sabung Ayam yang Aktif</h3>
+                        <li>Forum Diskusi: Tempat berbagi pengalaman dan strategi.</li>
+                        <li>Grup Media Sosial: Komunitas aktif di berbagai platform media sosial.</li>
+                        <li>Turnamen dan Acara Komunitas: Mengumpulkan pemain dari berbagai daerah.</li>
+                        <p>Dengan berbagai keunggulan ini, WS168 menyediakan platform sabung ayam online yang aman, mudah digunakan, dan sangat menarik bagi para pemain.</p>
+                        <h2>Ayo Daftar dan Coba Bermain Sabung Ayam Online di WS168!</h2>
+                        <p>WS168 adalah platform sabung ayam online terkemuka yang menawarkan berbagai keunggulan untuk pengalaman bermain yang optimal. Dengan keamanan yang terjamin, akses 24 jam, pilihan pertandingan yang beragam, bonus menarik, live streaming berkualitas tinggi, dan antarmuka pengguna yang ramah, WS168 adalah pilihan terbaik untuk para penggemar sabung ayam.</p>
+                        <p>Kenapa Harus WS168?</p>
+                        <li>Keamanan Terjamin: Sistem keamanan canggih dengan enkripsi data, SSL, dan autentikasi dua faktor memastikan informasi Anda aman.</li>
+                        <li>Akses 24 Jam: Main kapan saja tanpa batasan waktu.</li>
+                        <li>Pilihan Pertandingan yang Beragam: Nikmati berbagai pertandingan dari arena terkenal.</li>
+                        <li>Bonus Menarik: Dapatkan bonus selamat datang, bonus deposit, dan promosi mingguan.</li>
+                        <li>Live Streaming Berkualitas Tinggi: Tonton pertandingan secara real-time dengan kualitas video tinggi.</li>
+                        <li>Antarmuka Pengguna yang Ramah: Mudah digunakan, cocok untuk semua pemain.</li>
+                        <li>Dukungan Pelanggan Profesional: Tim dukungan siap membantu kapan saja.</li>
+                        <p>Kemudahan Pendaftaran dan Taruhan</p>
+                        <li>Proses Pendaftaran Mudah: Isi formulir singkat, verifikasi, dan mulai bermain.</li>
+                        <li>Metode Pembayaran Beragam: Pilihan pembayaran yang aman dan mudah.</li>
+                        <li>Fitur Quick Bet: Pasang taruhan dengan cepat dan mudah.</li>
+                        <p>Bergabunglah dengan Komunitas Aktif</p>
+                        <li>Forum Diskusi dan Grup Media Sosial: Berbagi pengalaman dan strategi dengan pemain lain.</li>
+                        <li>Turnamen dan Acara Komunitas: Ikuti turnamen dan acara seru yang mengumpulkan pemain dari berbagai daerah.</li>
+                        <p>Jangan lewatkan kesempatan untuk menikmati pengalaman bermain sabung ayam online yang seru dan menguntungkan di WS168. Daftar sekarang dan rasakan sendiri keunggulan WS168!</p>
+                        <p>Klik di sini untuk mendaftar dan mulai bermain di WS168 hari ini!</p>
                     </div>
                 </div>                
                 <span style="text-align:center">
